<resources>
    <string name="app_name">恩梯量仪</string>
    <string name="measuring">Measuring</string>
    <string name="data_query">Data duery</string>
    <string name="parameter_management">Parameter management</string>
    <string name="calibration">Calibration</string>
    <string name="user_management">User Management</string>
    <string name="program_management">Program management</string>
    <string name="system_management">System Management</string>
    <string name="store">Store</string>
    <string name="spc_analysis">SPC analysis</string>
    <string name="statistical_report">Statistical report</string>
    <string name="main_title">4Channels Measuring</string>
    <string name="describe">Describe</string>
    <string name="nominal_value">Nominal value</string>
    <string name="upper_tolerance_value">Upper tolerance value</string>
    <string name="lower_tolerance_value">Lower tolerance value</string>
    <string name="resolution">Resolution</string>
    <string name="deviation">Deviation</string>
    <string name="formula">Formula</string>
    <string name="grouping">Grouping</string>
    <string name="save">Save</string>
    <string name="m1_group">M1 Group</string>
    <string name="m2_group">M2 Group</string>
    <string name="m3_group">M3 Group</string>
    <string name="m4_group">M4 Group</string>
    <string name="m2_formula">M2 Formula</string>
    <string name="m1_formula">M1 Formula</string>
    <string name="m3_formula">M3 Formula</string>
    <string name="m4_formula">M4 Formula</string>
    <string name="name">Name</string>
    <string name="lower_limit">Lower limit</string>
    <string name="upper_limit">Upper limit</string>
    <string name="set">Set</string>
    <string name="set_only">设置</string>
    <string name="small_part_standard">Small part standard</string>
    <string name="big_part_standard">Big part standard</string>
    <string name="upper_limit_of_information_rate">Upper limit of information rate</string>
    <string name="lower_confidence_limit">Lower confidence limit</string>
    <string name="compensation_value">Compensation value</string>
    <string name="ch1">CH1</string>
    <string name="ch2">CH2</string>
    <string name="ch3">CH3</string>
    <string name="ch4">CH4</string>
    <string name="small_piece_ad">Small piece AD</string>
    <string name="big_piece_ad">Big piece AD</string>
    <string name="measure_ad">Measure AD</string>
    <string name="measure_value">Measure</string>
    <string name="calibration_method">Calibration Method</string>
    <string name="calibration_save">校验保存</string>
    <string name="select_all">Select All</string>
    <string name="samll_part_value">Small P value</string>
    <string name="big_part_value">Big P value</string>
    <string name="code_num">Code Num</string>
    <string name="code_name">Code Name</string>
    <string name="code1_name">Code 1</string>
    <string name="code2_name">Code 2</string>
    <string name="code3_name">Code 3</string>
    <string name="code4_name">Code 4</string>
    <string name="code5_name">Code 5</string>
    <string name="code6_name">Code 6</string>
    <string name="code7_name">Code 7</string>
    <string name="code8_name">Code 8</string>
    <string name="code9_name">Code 9</string>
    <string name="code10_name">Code 10</string>
    <string name="code11_name">Code 11</string>
    <string name="on_job">On Job</string>
    <string name="leave_job">Leave Job</string>
    <string name="status">Status</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="accout">Accout</string>
    <string name="communication">Communication</string>
    <string name="io">I/O</string>
    <string name="system_backup">System backup</string>
    <string name="force_calibration">Force calibration</string>
    <string name="store_method">Store Method</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="store_condition">Store Condition</string>
    <string name="second">Second</string>
    <string name="mm">mm</string>
    <string name="retention_time">Retention time</string>
    <string name="total_production">Total production</string>
    <string name="qualified_number">Qualified</string>
    <string name="defective">Defective</string>
    <string name="delete_statistical">Delete Statistical</string>
    <string name="delete_result">Delete result</string>
    <string name="handler">Handler</string>
    <string name="time">Time</string>
    <string name="workpiece_id">WorkpieceID</string>
    <string name="event">Event</string>
    <string name="result">Result</string>
    <string name="m1">M1</string>
    <string name="m2">M2</string>
    <string name="m3">M3</string>
    <string name="m4">M4</string>
    <string name="get_value">GetValue</string>
    <string name="additional">Additional</string>
    <string name="swap">Swap</string>
    <string name="unqualified_number">Unqualified</string>
    <string name="DRate">Defective Rate</string>
    <string name="statistical_p">分析参数</string>
    <string name="handler_line">HLine</string>
    <string name="text1">显示文本框</string>
    <string name="relative">布局</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_clear">清空</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_multiply">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_equal">=</string>
    <string name="in_value">取值中.</string>
    <string name="k_value">倍\u3000\u3000率</string>
    <string name="event_id">事件号</string>
    <string name="is_auto_show">是否自动弹出</string>
    <string name="add_title">附加信息</string>
    <string name="add_user_title">添加用户</string>
    <string name="edit_user_title">编辑用户信息</string>
    <string name="full_name">名称*</string>
    <string name="password">密码</string>
    <string name="repassword">重复密码</string>
    <string name="accout_user">账号*</string>
    <string name="password_user">密码*</string>
    <string name="repassword_user">重复密码*</string>
    <string name="login_title">用户登录</string>
    <string name="login_user_name">用户名:</string>
    <string name="login_user_password">密码:</string>
    <string name="login">登录</string>
    <string name="username_notnull">用户名不能为空</string>
    <string name="password_notnull">密码不能为空</string>
    <string name="user_not_exist">账号不存在</string>
    <string name="password_error">密码错误</string>
    <string name="filter_title">筛选</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="filter">\u3000筛选\u3000</string>
    <string name="normal">正常</string>
    <string name="not_supporte">暂不支持</string>
    <string name="refresh">刷新</string>
    <string name="out">导出</string>
    <string name="in">导入</string>
    <string name="daily_table">日报表</string>
    <string name="monthly_table">月报表</string>
    <string name="year_table">年报表</string>
    <string name="rate">良品率</string>
    <string name="code_p">测量程序</string>
    <string name="group_size">子组大小</string>
    <string name="group_num">子组数</string>
    <string name="time_mode">时间区间</string>
    <string name="num">序号</string>
    <string name="code_base_info">基本信息</string>
    <string name="code_force_cailbration">强制校准</string>
    <string name="code_workpiece_pic">工件图</string>
    <string name="code_step">分步策略</string>
    <string name="code_discrimination">判异</string>
    <string name="machine_tool">机床</string>
    <string name="spare_parts">零件</string>
    <string name="code_step_title">分步测量</string>
    <string name="step_1">步骤一</string>
    <string name="step_2">步骤二</string>
    <string name="step_3">步骤三</string>
    <string name="step_4">步骤四</string>
    <string name="remember_password">记住密码</string>
    <string name="quick_login">快速登入</string>
    <string name="factory_code">工厂编号</string>
    <string name="factory_name">工厂名称</string>
    <string name="device_info">设备信息</string>
    <string name="default_factory_code">123456789</string>
    <string name="default_factory_name">无锡恩梯量仪科技有限公司</string>
    <string name="manufacturer">制造商</string>
    <string name="device_name">设备名称</string>
    <string name="default_device_name">松下平板</string>
    <string name="device_code">设备编号</string>
    <string name="default_device_code">02</string>
    <string name="software_version">软件版本</string>
    <string name="kernel_version">内核版本</string>
    <string name="default_kernel_version">v1.0</string>
    <string name="base_version">内部版本</string>
    <string name="wifi_str">Wifi</string>
    <string name="code_set">程序详细设置</string>
    <string name="step_tips">步骤%1$d取值</string>
    <string name="over_tips">Ch%1$d测量倍率超过设定范围，无法保存.</string>
    <string name="input_fail">输入异常，请检查</string>
    <string name="parameter_name">参数名</string>
    <string name="show_item">显示项</string>
    <string name="limit">权限</string>
    <string name="instruction_book">打开说明书</string>
    <string name="number_format_tips">数据异常，保存失败，请检查。</string>
    <string name="logout">注销</string>
    <string name="workpiece_pic">工件图</string>
    <string name="add_workpiece_pic">选择图片</string>
    <string name="upgrade">升级</string>
    <string name="no_more_version">当前已是最新版本</string>
    <string name="ip_address">服务端IP</string>
    <string name="cancellation">注销</string>
    <string name="exit">退出</string>
    <string name="quit">返回</string>
    <string name="sure_clear">确认清除分步设置？</string>
    <string name="set_as_current">设为当前</string>
    <string name="comprehensive">综合判定</string>
    <string name="measure_item">测量项</string>
    <string name="measure_info">参数名\n规格</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>
    <string name="judge">判\u3000定</string>
    <string name="picture">图片</string>
    <string name="workspace_1">1号工件</string>
    <string name="workspace_5">5号工件</string>
    <string name="workspace_4">4号工件</string>
    <string name="workspace_3">3号工件</string>
    <string name="workspace_2">2号工件</string>
    <string name="m1_pic">M1图片</string>
    <string name="m2_pic">M2图片</string>
    <string name="m3_pic">M3图片</string>
    <string name="m4_pic">M4图片</string>
    <string name="m5">M5</string>
    <string name="m5_pic">M5图片</string>
    <string name="m22_pic">M22图片</string>
    <string name="m22">M22</string>
    <string name="m21_pic">M21图片</string>
    <string name="m21">M21</string>
    <string name="m20_pic">M20图片</string>
    <string name="m20">M20</string>
    <string name="m19_pic">M19图片</string>
    <string name="m19">M19</string>
    <string name="m18_pic">M18图片</string>
    <string name="m18">M18</string>
    <string name="m17_pic">M17图片</string>
    <string name="m17">M17</string>
    <string name="m16_pic">M16图片</string>
    <string name="m16">M16</string>
    <string name="m15_pic">M15图片</string>
    <string name="m15">M15</string>
    <string name="m14_pic">M14图片</string>
    <string name="m14">M14</string>
    <string name="m13_pic">M13图片</string>
    <string name="m13">M13</string>
    <string name="m12_pic">M12图片</string>
    <string name="m12">M12</string>
    <string name="m11_pic">M11图片</string>
    <string name="m11">M11</string>
    <string name="m10_pic">M10图片</string>
    <string name="m10">M10</string>
    <string name="m9_pic">M9图片</string>
    <string name="m9">M9</string>
    <string name="m8_pic">M8图片</string>
    <string name="m8">M8</string>
    <string name="edit">编辑</string>
    <string name="add_template">新建模板</string>
    <string name="copy_add_template">复制新建</string>
    <string name="template_num">模板编号</string>
    <string name="template_title">模板标题</string>
</resources>