<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_item_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BaseTabletTextStyle"
            android:text="@string/show_item"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BaseTabletTextStyle"
            />
        <TextView
            android:id="@+id/parameter_name_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BaseTabletTextStyle"
            android:text="@string/parameter_name"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BaseTabletTextStyle"
            android:text="@string/nominal_value"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BaseTabletTextStyle"
            android:text="@string/upper_tolerance_value"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/BaseTabletTextStyle"
            android:text="@string/lower_tolerance_value"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/archive_24px"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>