<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="15dp">

        <TextView
            style="@style/CodeTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/template_num" />

        <TextView
            style="@style/CodeTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/template_title" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="2"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible">

            <TextView
                android:id="@+id/set_as_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/eq_24px"
                android:text="@string/set_as_current"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:id="@+id/measure_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/archive_24px"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/edit_template_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:drawableTop="@drawable/settings_24px"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/add_template_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:drawableTop="@drawable/add_circle_24px"
                android:text="@string/add_template"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/copy_add_template_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:drawableTop="@drawable/add_circle_24px"
                android:text="@string/copy_add_template"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>