<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/data_layout"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:src="@mipmap/ic_uncheck"
        android:visibility="visible" />

    <TextView
        android:id="@+id/data_num"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/data_handler"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/handler" />

    <TextView
        android:id="@+id/data_time"
        style="@style/TextStyle"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:maxLines="2"
        android:text="@string/time" />

    <TextView
        android:id="@+id/data_workpiece_id"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/workpiece_id" />

    <TextView
        android:id="@+id/data_event"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/event" />

    <TextView
        android:id="@+id/data_result"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/result" />

    <TextView
        android:id="@+id/data_m1"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m1" />

    <ImageView
        android:id="@+id/data_m1_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m1_group" />

    <TextView
        android:id="@+id/data_m2"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m2" />

    <ImageView
        android:id="@+id/data_m2_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m2_group" />

    <TextView
        android:id="@+id/data_m3"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m3" />

    <ImageView
        android:id="@+id/data_m3_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m3_group" />

    <TextView
        android:id="@+id/data_m4"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m4_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m5"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m5_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m6"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m6_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m7"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m7_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m8"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m8_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m9"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m9_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m10"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m10_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m11"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m11_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m12"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m12_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m13"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m13_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m14"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m14_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m15"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m15_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m16"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m16_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m17"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m17_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m18"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m18_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m19"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m19_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m20"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m20_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m21"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m21_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />

    <TextView
        android:id="@+id/data_m22"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4" />

    <ImageView
        android:id="@+id/data_m22_pic"
        style="@style/TextStyle"
        android:layout_width="@dimen/data_width"
        android:layout_height="match_parent"
        android:text="@string/m4_group" />
</LinearLayout>